# Spyfish-Aotearoa-toolkit

./: .env_sample  .gitignore  .pre-commit-config.yaml  DOC Spyfish report v4.pbit  DOC Spyfish report.pbit  README.md  generate_docs.sh  pyproject.toml  requirements.txt
docs/: index.html  launch_docs.sh  sftk.__init__.html  sftk.clean_data.html  sftk.common.html  sftk.email_handler.html  sftk.html  sftk.ingression.html  sftk.log_config.html  sftk.s3_handler.html  sftk.utils.html
etc/: .env_sample
frontend/: streamlit_app.py  🐟_Spyfish_Data_Tools.py
metadata_management/: biigle_parser.py  email_to_sharepoint_copy.py  generate_reports.py  set_sharepoint_permissions.ipynb  sharepoint_copy_to_kso.py  validate_data.py  validation.py
notebooks/: BUV_deployments_review.ipynb  biigle_exploration.ipynb  biigle_parser.ipynb  biigle_uploader.ipynb  check_scientific_names.ipynb  concat_csv_files.ipynb  data_validation.ipynb  legacy_annotations_extract.ipynb  status_board.ipynb
powerbi_setup/: .env_sample_powerbi  DOC Spyfish report v3.23_no_Data.pbix  DOC Spyfish report v3.24.pbix  DOC Spyfish report v3.26.pbix  DOC Spyfish report v3.27.pbit  DOC Spyfish report v3.3.pbit  DOC Spyfish report v3.5.pbit  DOC Spyfish report v3.6.pbit  DOC Spyfish report v3.61.pbip  DOC Spyfish report v3.61.pbix  DOC Spyfish report.pbip  DOC Spyfish report.pbit  README.md  get_kso_data_from_s3.py  powerbi_instructions.md  powerbi_script.py  processed_annotations.csv  s3_to_powerbi.ipynb
sample_data/: sample_BUV_Deployment.csv  sample_BUV_Species.csv  sample_BUV_Survey_Metadata.csv  (+3 more)
(+51 files in other folders)
